Fix topbar accidentally covering the social links on the lifter page.

--- a/server/client/css/style.scss
+++ b/server/client/css/style.scss
@@ -53,6 +53,12 @@ div.topbar {
   height: $topbar-height;
 }
 
+div.topbar-without-controls {
+  position: fixed;
+  width: 100%;
+  height: 36px;
+}
+
 div.content {
   padding-top: $topbar-height;
 }
